[package]
name = "zymrhit"
version = "0.1.0"
edition = "2021"
authors = ["624593758@q.com"]
description = "http load generator"
homepage = "https://github.com/zhangyemengren/hit#readme"
repository = "https://github.com/zhangyemengren/hit"

[dependencies]
clap = "4.5.20"
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
