[package]
name = "zymrhit"
version = "0.1.2"
edition = "2021"
authors = ["624593758@qq.com"]
description = "http load generator"
homepage = "https://github.com/zhangyemengren/hit#readme"
repository = "https://github.com/zhangyemengren/hit"
license = "MIT"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
crossterm = {version = "0.28", features = ["event-stream"]}
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.12"
